Fix Boxes on Mobile.

--- a/src/styles/components/_work-box.scss
+++ b/src/styles/components/_work-box.scss
@@ -19,14 +19,15 @@
     }
 
     &__link {
-        display: block;
+        display: flex;
         height: 100%;
-        padding-top: .8125rem;
-        padding-bottom: .8125rem;
         padding-right: .5rem;
         width: 100%;
 
         @include media('tablet') {
+            display: block;
+            padding-top: .8125rem;
+            padding-bottom: .8125rem;
             padding-left: 1.8125rem;
         }
     }
